--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -17,29 +17,27 @@
 
             <label for="nom">Nom:</label>
             <input type="text" id="nom" name="nom" required><br>
-
-            <!-- TO-DO
-            
-            * Definir els camps de formulari:
-
-              * Cognoms (obligatori)
-              * Correu electrònic (obligatori i en format de correu electrónic)
-              * adreça
-              * Telèfon
-
-            -->
+            <label for="cognoms">Cognoms:</label>
+            <input type="text" id="cognoms" name="cognoms" required>
+            <label for="Email">Correu electronic:</label>
+            <input type="email" id="Email" name="Email" required>
+            <label for="adreça">Adreça:</label>
+            <input type="text" id="adreça" name="adreça" required>
+            <label for="telefon">Telèfon:</label>
+            <input type="tel" id="telefon" name="telefon" required>
         </fieldset>
 
         <fieldset>
             <legend>Estudis</legend>
-            <!--  TO-DO:
-              
-                Definir els següents camps de formulari:
 
-                * Select pe al cicle, amb les opcions DAM i DAW
-                * Curs: Amb dos inputs de tipus Radio per triar 1r o 2n.
-
-            -->
+            <label for="cicle">Cicle :</label>
+            <select id="cicle" name="cicle" required>
+                <option value="DAM">DAM</option>
+                <option value="DAW">DAW</option>
+            </select>
+            <label for="curs">Curs :</label>
+            <input type="radio" name="curs" required value="Primer">Primer<br>
+            <input type="radio" name="curs" required value="Segon">Segon <br>
 
         </fieldset>
 
@@ -48,7 +46,7 @@
             <!-- Els checkboxes dels mòduls es generaran dinàmicament -->
         </fieldset>
 
-        <button type="submit">Enviar matrícula</button>
+        <button type="submit" id="Enviar">Enviar matrícula</button>
     </form>
 
     <script src="js/index.js" type="module"></script>
